# OrganizePictures

./: .gitignore  .pylintrc  README.md  SETUP.md  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup-hooks.sh
hooks/: README.md  post-checkout  pre-commit
organize_pictures/: TruImage.py  TruMedia.py  TruVideo.py  __init__.py  image_hash.py  utils.py
organize_pictures/scripts/: checkfile.py  cleandb.py  diff.py  find_associated.py  fix_json_associations.py  gui.py  organizepictures.py  rehash_db.py  reset.py  truexif.py  trugiftomp4.py
tests/: README.md  conftest.py  test_image_hash.py  test_organize_pictures.py  test_truimage.py  test_trumedia.py  test_truvideo.py  test_utils.py
