[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["organize_pictures*"]
exclude = ["docs*", "tests*"]

[project]
name = 'OrganizePictures'
version = '0.4.3'
description='A tool for organizing pictures into folders by date.'

authors = [
    {name = "Jacob Truman", email="jacob.truman@gmail.com"},
]

dependencies = [
    "pytz>=2023.3",
    "piexif>=1.1.3",
    "pymediainfo>=6.0.1",
    "ffmpeg-python>=0.2.0",
    "pillow==9.5.0",
    "pyheif>=0.7.1",
]

requires-python = ">=3.7, <4"

[project.urls]
homepage = "https://github.com/jacobtruman/OrganizePictures"
documentation = "https://github.com/jacobtruman/OrganizePictures"
repository = "https://github.com/jacobtruman/OrganizePictures"

[project.scripts]
organizepictures = 'organize_pictures.scripts.organizepictures:main'
truexif = 'organize_pictures.scripts.truexif:main'
trugiftomp4 = 'organize_pictures.scripts.trugiftomp4:main'
