[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["organize_pictures*"]
exclude = ["docs*", "tests*"]

[project]
name = 'OrganizePictures'
version = '0.9.3'
description='A tool for organizing pictures into folders by date.'

authors = [
    {name = "Jacob Truman", email="jacob.truman@gmail.com"},
]

dependencies = [
    "pytz>=2023.3",
    "PyExifTool>=0.5.6",
    "pymediainfo>=6.1.0",
    "ffmpeg-python>=0.2.0",
    "pillow==9.5.0",
    "pillow_heif>=0.16.0",
    "xmltodict>=0.13.0",
    "dict2xml>=1.7.5",
    "python-magic>=0.4.27",
]

requires-python = ">=3.11, <4"

[project.urls]
homepage = "https://github.com/jacobtruman/OrganizePictures"
documentation = "https://github.com/jacobtruman/OrganizePictures"
repository = "https://github.com/jacobtruman/OrganizePictures"

[project.scripts]
organizepictures = 'organize_pictures.scripts.organizepictures:main'
truexif = 'organize_pictures.scripts.truexif:main'
trugiftomp4 = 'organize_pictures.scripts.trugiftomp4:main'
